--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -1,13 +1,64 @@
 {% extends 'base.html' %} {% load static %} {% block content%}
 <body>
-
   <section id="create-playlist">
     <h1>Create playlist</h1>
     <div class="container">
       <div class="input-container">
-        <input id="search-input" type="text" name="text" class="input" placeholder="search...">
-        <span class="icon"> 
-          <svg width="19px" height="19px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path opacity="1" d="M14 5H20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> <path opacity="1" d="M14 8H17" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M21 11.5C21 16.75 16.75 21 11.5 21C6.25 21 2 16.75 2 11.5C2 6.25 6.25 2 11.5 2" stroke="#000" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path> <path opacity="1" d="M22 22L20 20" stroke="#000" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+        <input
+          id="search-input"
+          type="text"
+          name="text"
+          class="input"
+          placeholder="search..."
+        />
+        <span class="icon">
+          <svg
+            width="19px"
+            height="19px"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                opacity="1"
+                d="M14 5H20"
+                stroke="#000"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+              <path
+                opacity="1"
+                d="M14 8H17"
+                stroke="#000"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+              <path
+                d="M21 11.5C21 16.75 16.75 21 11.5 21C6.25 21 2 16.75 2 11.5C2 6.25 6.25 2 11.5 2"
+                stroke="#000"
+                stroke-width="2.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+              <path
+                opacity="1"
+                d="M22 22L20 20"
+                stroke="#000"
+                stroke-width="3.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+            </g>
+          </svg>
         </span>
       </div>
       <select name="type" id="select-menu">
@@ -19,14 +70,25 @@
 
     <div class="results-container">
       <ul>
+        <p>Type to search results</p>
       </ul>
     </div>
-
+  </section>
+    
+  <section id="playlist-section">
+    <div
+    class="bg2"
+    style="background-image: url('{% static 'svg/bg2.svg' %}')"
+  ></div>
     <h1>Your playlist</h1>
-    <ul class="playlist-container">
+    <ul class="playlist-container"></ul>
+    <div id="button-container">
+      <button id="generate-playlist-button" class="fancy-button">
+        <span class="button_top"> Generate playlist </span>
+      </button>
+    </div>
+  </section>
 
-    </ul>
-    <button id="generate-playlist-button" class="fancy-button"><span class="button_top"> Generate playlist </span></button>
   <script src="{% static 'js/search_input.js' %}"></script>
 </body>
 {% endblock %}
