--- a/DjangoPlaylisty/templates/home.html
+++ b/DjangoPlaylisty/templates/home.html
@@ -11,7 +11,7 @@
       </h1>
     </div>
     <div
-      id="bg"
+      class="bg"
       style="background-image: url('{% static 'svg/bg.svg' %}')"
     ></div>
     {% if logged_in == False %}
