Add better design, buttons and slider

--- a/DjangoPlaylisty/static/styles/global.css
+++ b/DjangoPlaylisty/static/styles/global.css
@@ -71,3 +71,40 @@ option {
     font-family: 'Circular', sans-serif;
 
 }
+
+.loader {
+    cursor: pointer;
+    z-index: 100;
+    display: block;
+    width: 84px;
+    height: 84px;
+    position: relative;
+    margin-top: 5rem;
+  }
+  
+  .loader:before , .loader:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    background: #FFF;
+    transform: translate(-50% , -100%)  scale(0);
+    animation: push_401 2s infinite linear;
+  }
+  
+  .loader:after {
+    animation-delay: 1s;
+  }
+  
+  @keyframes push_401 {
+    0% , 50% {
+      transform: translate(-50% , 0%)  scale(1)
+    }
+  
+    100% {
+      transform: translate(-50%, -100%) scale(0)
+    }
+  }
