--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -85,7 +85,7 @@
     </ul>
     <div id="button-container">
       <button id="generate-playlist-button" class="fancy-button">
-        <span class="button_top"> Generate playlist </span>
+        Generate playlist
       </button>
     </div>
   </section>
