--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -67,7 +67,7 @@
         <option value="track">Track</option>
       </select>
     </div>
-
+    <h3>Results:</h3>
     <div class="results-container">
       <ul>
         <p>Type to search results</p>
