Fix overflow y and margins

--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -74,11 +74,7 @@
     </div>
   </section>
 
-  <section id="playlist-section">
-    <div
-      class="bg2"
-      style="background-image: url('{% static 'svg/bg2.svg' %}')"
-    ></div>
+  <section id="playlist-section" style="background-image: url('{% static 'svg/bg2.svg' %}')">
     <h1>Your playlist</h1>
     <ul class="playlist-container">
     </ul>
