--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -69,12 +69,11 @@
     </div>
     <div class="results-container">
       <ul>
-        <p>Type to search results</p>
       </ul>
     </div>
   </section>
 
-  <section id="playlist-section" style="background-image: url('{% static 'svg/bg2.svg' %}')">
+  <section id="playlist-section">
     <h1>Your playlist</h1>
     <ul class="playlist-container">
     </ul>
