--- a/DjangoPlaylisty/templates/create_playlist.html
+++ b/DjangoPlaylisty/templates/create_playlist.html
@@ -84,6 +84,6 @@
     </div>
   </section>
 
-  <script src="{% static 'js/search_input.js' %}"></script>
+  <script src="{% static 'js/main.js' %}"></script>
 </body>
 {% endblock %}
